sharing: avoid focusing the CcHostnameEntry widget when the panel is shown

https://bugzilla.gnome.org/show_bug.cgi?id=691763